--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "nuxt": "^3.17.5",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@nuxtjs/supabase": "^1.5.2",
+    "@nuxtjs/tailwindcss": "^7.0.0-beta.0"
   }
 }
