--- a/package.json
+++ b/package.json
@@ -10,12 +10,32 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "better-sqlite3": "^11.10.0",
     "nuxt": "^3.17.5",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@nuxt/content": "^3.6.1",
+    "@nuxt/eslint": "^1.4.1",
+    "@nuxt/icon": "^1.14.0",
+    "@nuxt/image": "^1.10.0",
+    "@nuxt/test-utils": "^3.19.1",
+    "@nuxt/ui": "^3.1.3",
+    "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/supabase": "^1.5.2",
-    "@nuxtjs/tailwindcss": "^7.0.0-beta.0"
+    "@tailwindcss/cli": "^4.1.10",
+    "autoprefixer": "^10.4.21",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-tailwindcss": "^4.0.0-alpha.0",
+    "husky": "^9.1.7",
+    "jsdom": "^26.1.0",
+    "lint-staged": "^16.1.2",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.0",
+    "tailwindcss": "^4.0.0",
+    "vitest": "^3.2.4"
   }
 }
