--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nuxt/ui": "^3.1.3",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/supabase": "^1.5.2",
+    "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
     "@tailwindcss/cli": "^4.1.10",
     "autoprefixer": "^10.4.21",
     "eslint-config-prettier": "^10.1.5",
